--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Tyler Lacroix CS499 Portfolio
 description: Final project for SNHU CS499
 show_downloads: false
 google_analytics:
-theme: jekyll-theme-midnight
+remote_theme: pages-themes/hacker@v0.2.0
